<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >
    
    <EditText android:id="@+id/edit_message"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:hint="@string/signin_name"></EditText>

    <EditText
        android:id="@+id/edit_message2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_message"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/signin_age" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_message2"
        android:layout_below="@+id/edit_message2"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:text="@string/signin_sex" />
    
	<RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true" >
	    
	    <RadioButton
	        android:id="@+id/radioButton1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/signin_sex_m"
	        android:checked="true" />
	
	    <RadioButton
	        android:id="@+id/radioButton2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/signin_sex_f" />
	</RadioGroup>
	
	<TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/radioSex"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:text="@string/signin_topic" />
	
    <RadioGroup
        android:id="@+id/radioTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignLeft="@+id/radioSex" >
	    
	    <RadioButton
	        android:id="@+id/radioButton3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/signin_topic_1"
	        android:checked="true" />
	
	    <RadioButton
	        android:id="@+id/radioButton4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/signin_topic_2" />
	    
	    <RadioButton
	        android:id="@+id/radioButton5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/signin_topic_3" />
	    
	</RadioGroup>

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

</RelativeLayout>